--- a/templates/index.html
+++ b/templates/index.html
@@ -8,15 +8,87 @@
   </head>
   <body>
 
-    <section class="hero is-small is-primary">
-        <div class="hero-body">
-          <p class="title">
-            Vitassa Hortifruti
-          </p>
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+          
+            <img src="https://i.pinimg.com/564x/7f/cc/d4/7fccd4143a51812cfbcff26451e2a113.jpg" width="78" height="28">
+          </a>
+      
+          <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+          </a>
         </div>
-      </section>
+      
+        <div id="navbarBasicExample" class="navbar-menu">
+          <div class="navbar-start">
+            
+      
+            <div id="navbarBasicExample" class="navbar-menu">
+                <div class="navbar-start">
+                    <a class="navbar-item">
+                    Início
+                  </a>
+                
 
+            <div class="navbar-item has-dropdown is-hoverable">
+              <a class="navbar-link">
+                Carrinho
+              </a>
+      
+              <div class="navbar-dropdown">
+                <a class="navbar-item">
+                  Ver produtos
+                </a>
+                <a class="navbar-item">
+                  Finalizar compra
+                </a>
+                <hr class="navbar-divider">
+                <a class="navbar-item">
+                  Relatar problema
+                </a>
+              </div>
+            </div>
+          </div>
+    
+        </div>
+      </nav>
+
+<section class="hero is-danger">
+    <div class="hero-body">
+        <p class="title">
+        Hortifruti
+        </p>
+        <p class="subtitle">
+        As melhores frutas e verduras do Brasil!
+        </p>
+    </div>
+    </section>
+
+
+
+  <section class="section">
+    <div class="container">
+      <h1 class="title">
+        Hello World
+      </h1>
+      <p class="subtitle">
+        My first website with <strong>Bulma</strong>!
+      </p>
     </div>
   </section>
+
+
+  <footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+        <strong>Vitassa Hortifruti</strong> by <a href="https://www.linkedin.com/in/vitor-candido-a48740214/">Vitor Candido</a>
+        . The website content
+        is licensed 
+      </p>
+    </div>
+  </footer>
+
   </body>
 </html>
